--- a/trunk/debian/changelog
+++ b/trunk/debian/changelog
@@ -1,3 +1,9 @@
+smp-utils (0.91-0.1) unstable; urgency=low
+
+  * add smp_phy_test and smp_discover_list, uniform exit status values
+
+ -- Douglas Gilbert <dgilbert@interlog.org>  Tue, 22 Aug 2006 16:00:00 -0400
+
 smp-utils (0.90-0.1) unstable; urgency=low
 
   * Initial release
