--- a/trunk/smp_read_gpio.8
+++ b/trunk/smp_read_gpio.8
@@ -1,4 +1,4 @@
-.TH SMP_READ_GPIO "8" "June 2006" "smp_utils-0.90" SMP_UTILS
+.TH SMP_READ_GPIO "8" "August 2006" "smp_utils-0.91" SMP_UTILS
 .SH NAME
 smp_read_gpio \- invoke READ GPIO REGISTER SMP function
 .SH SYNOPSIS
@@ -10,7 +10,7 @@ smp_read_gpio \- invoke READ GPIO REGISTER SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) READ GPIO REGISTER request function
+Sends a SAS Management Protocol (SMP) READ GPIO REGISTER request
 to a SMP target. The SMP target is identified by the <smp_device>
 and the <sas_addr>. Depending on the interface, the <sas_addr>
 may be deduced from the <smp_device>. With one interface there is
@@ -22,7 +22,7 @@ together with its corresponding WRITE GPIO REGISTER SMP function.
 The other SMP functions are defined in SAS documents at www.t10.org .
 SFF-8485 defines a curious device called a "virtual SMP port"
 that lives in a host bus adapter (HBA) and allows SMP to manipulate
-the sideband signals in wide internal cables. To stop other initiators
+the sideband signals on wide internal cables. To stop other initiators
 in a multi-initiator domain from accessing those sideband signals,
 the virtual SMP (target) port is not indicated in a DISCOVER response.
 .TP
@@ -53,7 +53,7 @@ send the response to stdout in binary. All error messages are sent to stderr.
 specifies the SAS address of the SMP target device. Typically this is an
 expander. This option may not be needed if the <smp_device> has the target's
 SAS address within it. The <sas_addr> is in decimal but most SAS addresses
-are shown in hexadecimal. The give a number in hexadecimal either prefix
+are shown in hexadecimal. To give a number in hexadecimal either prefix
 it with '0x' or put a trailing 'h' on it.
 .TP
 --type=<n> | -t <n>
