--- a/trunk/smp_utils.8
+++ b/trunk/smp_utils.8
@@ -1,17 +1,17 @@
-.TH SMP_UTILS "8" "June 2006" "smp_utils-0.90" SMP_UTILS
+.TH SMP_UTILS "8" "August 2006" "smp_utils-0.91" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SMP function
 .SH SYNOPSIS
 .B smp_*
-[\fI--help\fR] [\fI--hex\fR] [\fI--interface=<params>\fR] [\fI--raw\fR]
-[\fI--sa=<sas_addr>\fR] [\fI--verbose\fR] [\fI--version\fR]
-\fI<smp_device>[,<n>]\fR
+[\fI--expected=<n>\fR] [\fI--help\fR] [\fI--hex\fR]
+[\fI--interface=<params>\fR] [\fI--raw\fR] [\fI--sa=<sas_addr>\fR]
+[\fI--verbose\fR] [\fI--version\fR] \fI<smp_device>[,<n>]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
 smp_utils is a package of utilities. Each utility sends a Serial Attached
 SCSI (SAS) Management Protocol (SMP) request to a <smp_device> (a SMP
-target). If an error occurs then the error message is sent to stderr.
+target). If an error occurs then an error message is sent to stderr.
 If no error occurs, the response is decoded (the default), output
 in ASCII hex (when '--hex' is given) or output in binary to
 stdout (when '--raw' is given).
@@ -23,13 +23,14 @@ Currently there are multiple interfaces that allow SMP functions to
 be passed through to a SMP target.
 .PP
 One method is to have a <smp_device> which is actually the SMP
-initiator (e.g. '/dev/mptcl,0'). In this case the '--sa=<sas_addr>'
-of the SMP target must be supplied.
+initiator (e.g. '/dev/mptcl,0'). In this case the SMP target's
+SAS address must be supplied with '--sa=<sas_addr>'.
 .PP
 Another method is to have a <smp_device> which represents the
 SMP target. In this case no <sas_addr> needs to be given (since it
-is implicit). This method may be simpler but it precludes the
-discovery process.
+is implicit). This method may be simpler but it has some
+limitations (e.g. it assumes the SMP target has already been
+discovered which may not be the case for the initial discovery process).
 .PP
 Each utility in smp_utils attempts to work out which interface it has
 been given by examining the <smp_device> file. There
@@ -57,28 +58,39 @@ variable is checked and if present its contents are used as the device name.
 If the SAS address (of the SMP target) is not given and it is
 required (i.e. it is not implicit in the device name) then
 the SMP_UTILS_SAS_ADDR environment variable is checked and if present
-its contents are used as the SAS address.
-.SH PROCESS STATUS
-If a utility can form the SMP request, send it to the pass through, fetch
-the response and find the response is well formed and reports no errors
-then the process exits with a status value of 0 . Otherwise the process
-exits with a status value of 1 .
+its contents are used as the SAS address. SAS addresses are usually given
+in hex indicated by a leading '0x' or trailing 'h'.
+.PP
+In all cases command line options override the corresponding
+environment variable.
 .SH COMMON OPTIONS
 .TP
+--expected=<n> | -E <n>
+revision 4a of the SAS-2 draft introduced an 'expected expander change
+count' field in some SMP requests. The idea is to detect other SMP
+initiators trying to change the state of an expander. The value <n> is
+from 0 to 65535 inclusive with 0 being the default value. When <n> is
+greater than zero then if the value doesn't match the expander
+change count of the SMP target (i.e. the expander) when the request
+arrives then the target ignores the request and sets a function
+result of "invalid expander change count" in the response.
+.TP
 --help | -h
-output the usage message then exit.
+output the usage message for the utility then exit.
 .TP
 --hex | -H
 output the response in hexadecimal.
 .TP
 --interface=<intf>[,force] | -I <intf>[,force]
 interface specific parameters. This option is usually not needed since the
-interface type is guessed by a utility based on the characteristics
-of the given <smp_device> argument. If the guess doesn't work then the
-interface can be specified by giving a <intf> of either 'mpt' or 'tpl'.
-Sanity checks are still performed and a utility may refuse if it doesn't
-agree with the given <intf>. If the user is really sure then adding
-a ',force' will force the utility to assume the given interface.
+interface type is guessed by a utility based on the characteristics of the
+given <smp_device> argument or what is in the corresponding enviroment
+variables. If the guess doesn't work then the interface
+can be specified by giving a <intf> of either 'mpt' or 'tpl' ( with 'ai'
+being a synonym for 'tpl'). Sanity checks are still performed and a
+utility may refuse if it doesn't agree with the given <intf>. If the user
+is really sure then adding a ',force' will force the utility to use the
+given interface.
 .TP
 --raw | -r
 send the response to stdout in binary. All error messages are sent to stderr.
@@ -86,16 +98,46 @@ send the response to stdout in binary. All error messages are sent to stderr.
 --sa=<sas_addr> | -s <sas_addr>
 specifies the SAS address of the SMP target device. Typically this is an
 expander. This option may not be needed if the <smp_device> has the target's
-SAS address within it. The <sas_addr> is in decimal but most SAS addresses
-are shown in hexadecimal. The give a number in hexadecimal either prefix
-it with '0x' or put a trailing 'h' on it. If not given then the value in
-the environment variable SMP_UTILS_SAS_ADDR is used.
+SAS address associated with it. The <sas_addr> is in decimal but most
+SAS addresses are shown in hexadecimal. To give a number in hexadecimal
+either prefix it with '0x' or put a trailing 'h' on it. If this option
+is not given then the value in the environment variable SMP_UTILS_SAS_ADDR
+is used.
 .TP
 --verbose | -v
-increase the verbosity of the output. Can be used multiple times
+increase the verbosity of the output. Can be used multiple times.
 .TP
 --version | -V
 print the version string and then exit.
+.SH EXIT STATUS
+To aid scripts that call these utilities, the exit status is set to
+indicate success (0) or failure (1 or more):
+.TP
+.B 0
+success
+.TP
+.B 1 - 63
+reserved for SMP function result codes. See SAS draft or standard,
+application layer, management application layer, SMP functions.
+Here are some common function result codes: 1 [unknown SMP function],
+2 [SMP function failed], 16 [phy does not exist], 17 [index does not
+exist], 18 [phy does not support SATA] and 19 [unknown phy operation].
+.TP
+.B 91
+syntax error. Either illegal options, options with bad arguments or
+a combination of options that is not permitted.
+.TP
+.B 92
+the utility is unable to open, close or use the given <smp_device>.
+The given file name could be incorrect or there may be permission
+problems. Adding the '-v' option may give more information.
+.TP
+.B 97
+the response to a SMP function failed sanity checks.
+.TP
+.B 99
+any error that can't be categorized into values 1 to 97 may yield
+this value. This includes transport and operating system errors.
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
@@ -106,4 +148,6 @@ Copyright \(co 2006 Douglas Gilbert
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
-.B smp_discover(smp_utils)
+.B smp_conf_route_info, smp_discover, smp_discover_list, smp_phy_control,
+.B smp_phy_test, smp_read_gpio, smp_rep_general, smp_rep_manufacturer,
+.B smp_rep_phy_err_log, smp_rep_phy_sata, smp_rep_route_info, smp_write_gpio
