--- a/smp_rep_phy_sata.8
+++ b/smp_rep_phy_sata.8
@@ -1,4 +1,4 @@
-.TH SMP_REP_PHY_ERR_LOG "8" "June 2006" "smp_utils-0.90" SMP_UTILS
+.TH SMP_REP_PHY_ERR_LOG "8" "August 2006" "smp_utils-0.91" SMP_UTILS
 .SH NAME
 smp_rep_phy_err_log \- invoke REPORT PHY ERROR LOG SMP function
 .SH SYNOPSIS
@@ -37,7 +37,7 @@ send the response to stdout in binary. All error messages are sent to stderr.
 specifies the SAS address of the SMP target device. Typically this is an
 expander. This option may not be needed if the <smp_device> has the target's
 SAS address within it. The <sas_addr> is in decimal but most SAS addresses
-are shown in hexadecimal. The give a number in hexadecimal either prefix
+are shown in hexadecimal. To give a number in hexadecimal either prefix
 it with '0x' or put a trailing 'h' on it.
 .TP
 --verbose | -v
