--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,21 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
+Changelog for smp_utils-0.91 [20060822]
+  - add '--multiple' to smp_discover
+  - add uniform exit status values (see 'man smp_utils')
+  - fix affiliations flags in smp_rep_phy_sata
+  - report bad operation abbreviations in smp_phy_control
+  - add '--change_report' option to smp_rep_general
+  - improve mpt error detection and reporting
+  - add information to COVERAGE file
+  - smp_rep_general: add physical presence and zoning bits
+  - smp_phy_test: add new SMP function
+  - smp_discover_list: add new SMP function
+  - smp_conf_route_info, smp_phy_control, smp_phy_test:
+    add '--expected=' option to set "expected expander
+    change count" in request
+
 Changelog for smp_utils-0.90 [20060611]
   - add smp_read_gpio utility (READ GPIO REGISTER)
   - add logic to read SMP_UTILS_DEVICE and SMP_UTILS_SAS_ADDR
