--- a/INSTALL
+++ b/INSTALL
@@ -14,8 +14,7 @@ smp_utils.spec in the "SPEC" directory. These directories are found under
 /usr/src/redhat on redhat/fedora distributions. Then from the "SPEC"
 directory execute "rpmbuild -ba smp_utils.spec". If all goes well a source
 rpm should be found in the SRPMS directory and binary rpms in the RPMS/i386
-directory (for i386 architecture). Note the spec file will only build those
-utilities found in the main directory. When the smp_utils binary rpm is
+directory (for i386 architecture). When the smp_utils binary rpm is
 installed the executables and their associated man pages should be placed in
 appropriate places.
 
@@ -24,7 +23,8 @@ change directory to the top level within the smp_utils source. Then:
  # chmod +x debian/rules
  # dpkg-buildpackage -b -rfakeroot
 The binary deb packages will be placed in the parent directory (of
-the smp_utils source directory) if all goes well.
+the smp_utils source directory) if all goes well. The
+build_debian.sh script contains the above commands.
 
 Douglas Gilbert
-11th June 2006
+16th August 2006
