--- a/README
+++ b/README
@@ -7,13 +7,22 @@ SMP passthroughs are not mature. This package supports the linux
 2.4 and 2.6 series and should be easy to port to other operating
 systems.
 
+See COVERAGE file for more information about the coverage of various
+SMP functions.
+
+Each utility in the smp_utils package has a corresponding man page.
+Additionally there is a 'smp_utils' man page that contains common
+information, including options used by most or all utilities plus
+the various exit status values.
+
+
 The reference documents are:
   sas-r05.pdf          www.t10.org   draft prior to original SAS spec
   sas1r10.pdf          www.t10.org   draft prior to SAS 1.1 spec
-  sas2r04.pdf          www.t10.org   SAS 2 draft
+  sas2r05a.pdf         www.t10.org   SAS 2 draft
   SFF_8485.PDF         www.sffcommittee.com   SGPIO revision 0.7
 
 
 
 Doug Gilbert
-11th June 2006
+22nd August 2006
