--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,21 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
+Changelog for smp_utils-0.92 [20061208]
+  - all: suggest using '-v' if smp_send_req() fails
+  - smp_lib: sync function names and results with sas2r07
+  - smp_rep_general: sync with sas2r07
+  - smp_rep_route_info: add '--multiple' and '--num="
+    options. Underlying SMP function may be called multiple
+    times to show one line per phy's route table.
+  - smp_lib.h: add C++ 'extern "C" ' wrapper
+  - smp_discover+smp_discover_list: sync with sas2r07
+  - smp_conf_general: add new SMP function
+  - smp_utils.8: suggestions for finding expander SAS addresses
+    and mptsas ioc_num
+  - Makefile.freebsd: builds utilities on FreeBSD
+  - man pages: cleanup
+
 Changelog for smp_utils-0.91 [20060822]
   - add '--multiple' to smp_discover
   - add uniform exit status values (see 'man smp_utils')
