--- a/smp_conf_general.8
+++ b/smp_conf_general.8
@@ -1,35 +1,31 @@
-.TH SMP_CONF_ROUTE_INFO "8" "December 2006" "smp_utils\-0.92" SMP_UTILS
+.TH SMP_CONF_GENERAL "8" "December 2006" "smp_utils\-0.92" SMP_UTILS
 .SH NAME
-smp_conf_route_info \- invoke CONFIGURE ROUTE INFORMATION SMP function
+smp_conf_general \- invoke CONFIGURE GENERAL SMP function
 .SH SYNOPSIS
-.B smp_conf_route_info
-[\fI\-\-disable\fR] [\fI\-\-expected=EX\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
-[\fI\-\-index=IN\fR] [\fI\-\-interface=PARAMS\fR] [\fI\-\-phy=ID\fR]
-[\fI\-\-raw\fR] [\fI\-\-routed=R_SAS_ADDR\fR] [\fI\-\-sa=SAS_ADDR\fR]
-[\fI\-\-verbose\fR] [\fI\-\-version\fR] \fISMP_DEVICE[,N]\fR
+.B smp_conf_general
+[\fI\-\-connect=CO\fR] [\fI\-\-expected=EX\fR] [\fI\-\-help\fR]
+[\fI\-\-hex\fR] [\fI\-\-inactivity=IN\fR] [\fI\-\-interface=PARAMS\fR]
+[\fI\-\-nexus=NE\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
+[\fI\-\-verbose\fR] [\fI\-\-version\fR]
+\fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) CONFIGURE ROUTE INFORMATION
+Sends a SAS Management Protocol (SMP) CONFIGURE GENERAL
 request function to a SMP target. The SMP target is identified by
 the \fISMP_DEVICE\fR and the \fI\-\-sa=SAS_ADDR\fR. Depending on the
 interface, the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR.
 With one interface there is one \fISMP_DEVICE\fR per machine so the
 \fISMP_DEVICE,N\fR syntax is needed to differentiate between HBAs if
 there are multiple present.
-.PP
-Each phy in a SAS expander that has an associated routing attribute
-of "table" has a router table. The number of rows (or entries) in
-each router table is given by the "expander route indexes" field
-in the response of the REPORT GENERAL function.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 .TP
-\fB\-d\fR, \fB\-\-disable\fR
-set the "disable expander route entry" flag in a row of the router table
-associated with \fI\-\-phy=ID\fR of the given SMP target (e.g. an expander).
-Within the router table the row that is disabled is identified by
-the expander route index given by \fI\-\-index=IN\fR.
+\fB\-c\fR, \fB\-\-connect\fR=\fICO\fR
+sets the "update STP maximum connect time limit" flag and the
+corresponding "STP maximum connect time limit" field to \fICO\fR. Unit of
+\fICO\fR is 100 microseconds. A \fICO\fR of zero is taken to mean no
+maximum connection time limit.
 .TP
 \fB\-E\fR, \fB\-\-expected\fR=\fIEX\fR
 set the 'expected expander change count' field in the SMP request.
@@ -45,34 +41,33 @@ output the usage message then exit.
 \fB\-H\fR, \fB\-\-hex\fR
 output the response in hexadecimal.
 .TP
-\fB\-i\fR, \fB\-\-index\fR=\fIIN\fR
-expander route index. \fIIN\fR is a value between 0 and 65535. Default is 0.
-More precisely the maximum index value is (expander_route_indexes \- 1).
+\fB\-i\fR, \fB\-\-inactivity\fR=\fIIN\fR
+sets the "update STP bus inactivity time limit" flag and the
+corresponding "STP bus inactivity time limit" field to \fIIN\fR. Unit of
+\fIIN\fR is 100 microseconds. A \fIIN\fR of zero is taken to mean no bus
+inactivity time limit.
 .TP
 \fB\-I\fR, \fB\-\-interface\fR=\fIPARAMS\fR
 interface specific parameters. In this case "interface" refers to the
 path through the operating system to the SMP initiator. See the smp_utils
 man page for more information.
 .TP
-\fB\-p\fR, \fB\-\-phy\fR=\fIID\fR
-phy identifier. \fIID\fR is a value between 0 and 127. Default is 0.
+\fB\-n\fR, \fB\-\-nexus\fR=\fINE\fR
+sets the "update STP SMP I_T nexus loss time" flag and the
+corresponding "STP SMP I_T nexus loss time" field to \fINE\fR. Unit of
+\fINE\fR is one millisecond. A \fINE\fR of zero is taken to mean a vendor
+specific amount of time; a \fINE\fR of 65535 means the port shall never
+recognize an I_T nexus loss.
 .TP
 \fB\-r\fR, \fB\-\-raw\fR
 send the response to stdout in binary. All error messages are sent to stderr.
 .TP
-\fB\-R\fR, \fB\-\-routed\fR=\fIR_SAS_ADDR\fR
-specifies the SAS address to be placed in a row (given by \fI\-\-index=IN\fR)
-of the router table associated with \fI\-\-phy=ID\fR. Default value is 0.
-The \fIR_SAS_ADDR\fR is in decimal but most SAS addresses are given in
-hexadecimal. To give a number in hexadecimal either prefix it with '0x' or
-put a trailing 'h' on it.
-.TP
 \fB\-s\fR, \fB\-\-sa\fR=\fISAS_ADDR\fR
 specifies the SAS address of the SMP target device. Typically this is an
 expander. This option may not be needed if the \fISMP_DEVICE\fR has the
-target's SAS address within it. The \fISAS_ADDR\fR is in decimal but most
-SAS addresses are shown in hexadecimal. To give a number in hexadecimal
-either prefix it with '0x' or put a trailing 'h' on it.
+target's SAS address within it. The \fISAS_ADDR\fR is in decimal but most SAS
+addresses are shown in hexadecimal. To give a number in hexadecimal either
+prefix it with '0x' or put a trailing 'h' on it.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 increase the verbosity of the output. Can be used multiple times
@@ -89,4 +84,4 @@ Copyright \(co 2006 Douglas Gilbert
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
-.B smp_utils, smp_rep_general(smp_utils), smp_rep_route_info(smp_utils)
+.B smp_utils, smp_rep_general(smp_utils)
