--- a/smp_discover_list.8
+++ b/smp_discover_list.8
@@ -1,95 +1,100 @@
-.TH SMP_DISCOVER_LIST "8" "August 2006" "smp_utils-0.91" SMP_UTILS
+.TH SMP_DISCOVER_LIST "8" "December 2006" "smp_utils\-0.92" SMP_UTILS
 .SH NAME
 smp_discover_list \- invoke DISCOVER LIST SMP function
 .SH SYNOPSIS
 .B smp_discover_list
-[\fI--brief\fR] [\fI--descriptor=<n>\fR] [\fI--filter=<n>\fR] [\fI--help\fR]
-[\fI--hex\fR] [\fI--ignore\fR] [\fI--interface=<params>\fR] [\fI--num=<n>\fR]
-[\fI--one\fR] [\fI--phy=<n>\fR] [\fI--raw\fR] [\fI--sa=<sas_addr>\fR]
-[\fI--verbose\fR] [\fI--version\fR] \fI<smp_device>[,<n>]\fR
+[\fI\-\-brief\fR] [\fI\-\-descriptor=TY\fR] [\fI\-\-filter=FI\fR]
+[\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-ignore\fR]
+[\fI\-\-interface=PARAMS\fR] [\fI\-\-num=NUM\fR] [\fI\-\-one\fR]
+[\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
+[\fI\-\-verbose\fR] [\fI\-\-version\fR] \fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) DISCOVER LIST request function to a SMP
-target and decodes or outputs the response. The SMP target is identified by
-the <smp_device> and the <sas_addr>. Depending on the interface,
-the <sas_addr> may be deduced from the <smp_device>. With one interface
-there is one <smp_device> per machine so the '<smp_device>,<n>' syntax is
-needed to differentiate between HBAs if there are multiple present.
+Sends a SAS Management Protocol (SMP) DISCOVER LIST request function to a
+SMP target and decodes or outputs the response. The SMP target is identified
+by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR. Depending on the interface,
+the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR. With one
+interface there is one \fISMP_DEVICE\fR per machine so the
+\fISMP_DEVICE[,N]\fR syntax is needed to differentiate between HBAs if there
+are multiple present.
+.SH OPTIONS
+Mandatory arguments to long options are mandatory for short options as well.
 .TP
---brief | -b
+\fB\-b\fR, \fB\-\-brief\fR
 reduce the decoded response output.
 .TP
---descriptor=<n> | -d <n>
-set the descriptor type field in the request. When <n> is 0 (default) use
-DISCOVER response format as descriptor in the response. When <n> is 1 use
-the short format (i.e. 24 byte per descriptor) descriptor in the response.
+\fB\-d\fR, \fB\-\-descriptor\fR=\fITY\fR
+DISCOVER response format as descriptor in the response. When \fITY\fR is 1
+use the short format (i.e. 24 byte per descriptor) descriptor in the
+response.
 .TP
---filter=<n> | -f <n>
-set the filter field in the request. When <n> is 0 (default) fetch
-descriptors for all phys. When <n> is 1 only fetch descriptors for
-phys attached to expanders. When <n> is 2 only fetch descriptors for
+\fB\-f\fR, \fB\-\-filter\fR=\fIFI\fR
+set the filter field in the request. When \fIFI\fR is 0 (default) fetch
+descriptors for all phys. When \fIFI\fR is 1 only fetch descriptors for
+phys attached to expanders. When \fIFI\fR is 2 only fetch descriptors for
 phys attached to expanders or end devices.
 .TP
---help | -h
+\fB\-h\fR, \fB\-\-help\fR
 output the usage message then exit.
 .TP
---hex | -H
+\fB\-H\fR, \fB\-\-hex\fR
 output the response in hexadecimal.
 .TP
---ignore | -i
-sets the Ignore Zone Group bit in the SMP Discover request.
+\fB\-i\fR, \fB\-\-ignore\fR
+sets the Ignore Zone Group bit in the SMP Discover list request.
 .TP
---interface=<params> | -I <params>
+\fB\-I\fR, \fB\-\-interface\fR=\fIPARAMS\fR
 interface specific parameters. In this case "interface" refers to the
 path through the operating system to the SMP initiator. See the smp_utils
 man page for more information.
 .TP
---num=<n> | -n <n>
+\fB\-n\fR, \fB\-\-num\fR=\fINUM\fR
 maximum number of descriptors fetch. If any descriptors are in the
 response the first phy id will be greater than or equal to the
-argument of '--phy=<n>'. Note that maximum SMP frame size is
+argument of \fI\-\-phy=ID\fR. Note that maximum SMP frame size is
 1032 bytes (including a trailing 4 byte CRC) which may limit
 the number of descriptors that can be fetched by a single DISCOVER
-LIST function (especially when '--descriptor=0').
+LIST function (especially when '\-\-descriptor=0').
 .TP
---one | -o
+\fB\-o\fR, \fB\-\-one\fR
 use one line (summarized) format for each descriptor in the response.
 The default action when this option is not given is to output multiple
 indented lines for each descriptor in the response.
 .TP
---phy=<n> | -p <n>
-phy identifier. This is a value between 0 and 127. Default is 0.
+\fB\-p\fR, \fB\-\-phy\fR=\fIID\fR
+phy identifier. \fIID\fR is a value between 0 and 127. Default is 0.
 This is the lowest numbered phy id to attempt fetch in the response.
 Note that due to the filter field setting, the first phy id in
 the response may be greater than the argument to this option.
 .TP
---raw | -r
+\fB\-r\fR, \fB\-\-raw\fR
 send the response to stdout in binary. All error messages are sent to stderr.
 .TP
---sa=<sas_addr> | -s <sas_addr>
+\fB\-s\fR, \fB\-\-sa\fR=\fISAS_ADDR\fR
 specifies the SAS address of the SMP target device. Typically this is an
-expander. This option may not be needed if the <smp_device> has the target's
-SAS address within it. The <sas_addr> is in decimal but most SAS addresses
-are shown in hexadecimal. To give a number in hexadecimal either prefix
-it with '0x' or put a trailing 'h' on it.
+expander. This option may not be needed if the \fISMP_DEVICE\fR has the
+target's SAS address within it. The \fISAS_ADDR\fR is in decimal but most
+SAS addresses are shown in hexadecimal. To give a number in hexadecimal
+either prefix it with '0x' or put a trailing 'h' on it.
 .TP
---verbose | -v
+\fB\-v\fR, \fB\-\-verbose\fR
 increase the verbosity of the output. Can be used multiple times
 .TP
---version | -V
+\fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
 .SH SINGLE LINE FORMAT
-The '--one' option causes SMP DISCOVER LIST descriptors to be compressed to
-a header section followed by one line per phy. To save space SAS addresses
-are shown in hex without a '0x' prefix or 'h' suffix. The header section
-outputs information found in the DISCOVER LIST response's header section.
+The \fI\-\-one\fR option causes SMP DISCOVER LIST descriptors to be
+compressed to a header section followed by one line per phy. To save
+space SAS addresses are shown in hex without a '0x' prefix or 'h' suffix.
+The header section outputs information found in the DISCOVER LIST response's
+header section.
 .PP
 For each descriptor in the DISCOVER LIST response, one line is output
 starting with "  phy  <n>:" where <n> is the phy
 identifier (and they are origin zero). That is followed by the routing
 attribute represented by a single letter which is either "D" for direct
-routing, "S" to subtractive routing and "T" for table routing. Then comes
+routing, "S" to subtractive routing or "T" for table routing. Then comes
 the negotiated physical link rate which is either "disabled", "reset
 problem" or "spinup hold". Other states are mapped to "attached". This
 includes enabled phys with nothing connected which appear
@@ -108,7 +113,7 @@ protocols supported by the attached device which are
 shown as "i(<list>)" for initiator protocols and/or "t(<list>)" for
 target protocols. The <list> is made up
 of "PORT_SEL", "SSP", "STP", "SMP" and "SATA" with "+" used as a
-separator. For example a SAS host adapter with most likely appear
+separator. For example a SAS host adapter wi11 most likely appear
 as: "i(SSP+STP+SMP)". This completes the information about the
 attached phy, hence the closing right bracket.
 .PP
