--- a/smp_rep_phy_sata.8
+++ b/smp_rep_phy_sata.8
@@ -1,11 +1,12 @@
-.TH SMP_REP_PHY_ERR_LOG "8" "December 2006" "smp_utils\-0.92" SMP_UTILS
+.TH SMP_REP_PHY_ERR_LOG "8" "January 2007" "smp_utils\-0.93" SMP_UTILS
 .SH NAME
 smp_rep_phy_err_log \- invoke REPORT PHY ERROR LOG SMP function
 .SH SYNOPSIS
 .B smp_rep_phy_err_log
-[\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-interface=PARAMS\fR]
-[\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
-[\fI\-\-verbose\fR] [\fI\-\-version\fR] \fISMP_DEVICE[,N]\fR
+[\fI\-\-affiliation=AC\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
+[\fI\-\-interface=PARAMS\fR] [\fI\-\-phy=ID\fR] [\fI\-\-raw\fR]
+[\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR]
+\fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
@@ -15,6 +16,10 @@ the \fISAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may be
 deduced from the \fISMP_DEVICE\fR. With one interface there is one
 \fISMP_DEVICE\fR per machine so the \fISMP_DEVICE,N\fR syntax is needed to
 differentiate between HBAs if there are multiple present.
+.TP
+\fB\-a\fR, \fB\-\-affiliation\fR=\fIAC\fR
+where \fIAC\fR is the affiliation context relative identifier that is
+placed in request (new in sas2r08). Defaults to 0.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 output the usage message then exit.
@@ -50,7 +55,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006 Douglas Gilbert
+Copyright \(co 2006\-2007 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
