--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,12 +2,14 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.93 [20070423]
+Changelog for smp_utils-0.93 [20070711]
+  - smp_phy_control: sync with sas2r10
   - smp_rep_phy_sata: affiliation contexts, added sas2r08
   - smp_discover: add '--list' option for attribute=value output
-  - smp_rep_general: sync with sas2r09
+  - smp_rep_general: sync with sas2r09,10
   - smp_discover, smp_discover_list: sync with sas2r09
     - warn if expander's SAS address is different from requested
+  - add smp_rep_exp_route_tbl utility
 
 Changelog for smp_utils-0.92 [20061208]
   - all: suggest using '-v' if smp_send_req() fails
