--- a/doc/smp_discover.8
+++ b/doc/smp_discover.8
@@ -1,4 +1,4 @@
-.TH SMP_DISCOVER "8" "February 2007" "smp_utils\-0.93" SMP_UTILS
+.TH SMP_DISCOVER "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
 .SH NAME
 smp_discover \- invoke DISCOVER SMP function
 .SH SYNOPSIS
@@ -112,12 +112,15 @@ phy identifier 11 connected to a SATA target (or SATA "device" to use
 the t13.org term):
 .PP
   phy  11:T:attached:[500605b000000afb:00  t(SATA)]  1.5 Gbps
+.SH CONFORMING TO
+The SMP DISCOVER function was introduced in SAS-1, with small additions
+in SAS-1.1 . There have been a large number of additions in SAS-2 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2007 Douglas Gilbert
+Copyright \(co 2006\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
