--- a/doc/smp_phy_control.8
+++ b/doc/smp_phy_control.8
@@ -1,4 +1,4 @@
-.TH SMP_PHY_CONTROL "8" "July 2007" "smp_utils\-0.93" SMP_UTILS
+.TH SMP_PHY_CONTROL "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
 .SH NAME
 smp_phy_control \- invoke PHY CONTROL SMP function
 .SH SYNOPSIS
@@ -102,12 +102,14 @@ increase the verbosity of the output. Can be used multiple times
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
+.SH CONFORMING TO
+The SMP PHY CONTROL function was introduced in SAS-1 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2007 Douglas Gilbert
+Copyright \(co 2006\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
