--- a/doc/smp_phy_test.8
+++ b/doc/smp_phy_test.8
@@ -1,4 +1,4 @@
-.TH SMP_PHY_TEST "8" "December 2006" "smp_utils\-0.92" SMP_UTILS
+.TH SMP_PHY_TEST "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
 .SH NAME
 smp_phy_test \- invoke PHY TEST FUNTION SMP function
 .SH SYNOPSIS
@@ -94,12 +94,14 @@ increase the verbosity of the output. Can be used multiple times
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
+.SH CONFORMING TO
+The SMP PHY TEST function was introduced in SAS-1.1 and enhanced in SAS-2 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006 Douglas Gilbert
+Copyright \(co 2006\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
