--- a/doc/smp_read_gpio.8
+++ b/doc/smp_read_gpio.8
@@ -1,4 +1,4 @@
-.TH SMP_READ_GPIO "8" "December 2006" "smp_utils\-0.92" SMP_UTILS
+.TH SMP_READ_GPIO "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
 .SH NAME
 smp_read_gpio \- invoke READ GPIO REGISTER SMP function
 .SH SYNOPSIS
@@ -69,12 +69,16 @@ increase the verbosity of the output. Can be used multiple times
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
+.SH CONFORMING TO
+The SMP READ GPIO REGISTER function is defined in SFF\-8485 (see
+www.sffcommittee.com ) together with its corresponding WRITE
+GPIO REGISTER SMP function.
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006 Douglas Gilbert
+Copyright \(co 2006\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
