--- a/doc/smp_rep_general.8
+++ b/doc/smp_rep_general.8
@@ -1,4 +1,4 @@
-.TH SMP_REP_GENERAL "8" "December 2006" "smp_utils\-0.92" SMP_UTILS
+.TH SMP_REP_GENERAL "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
 .SH NAME
 smp_rep_general \- invoke REPORT GENERAL SMP function
 .SH SYNOPSIS
@@ -49,12 +49,15 @@ increase the verbosity of the output. Can be used multiple times
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
+.SH CONFORMING TO
+The SMP REPORT GENERAL function was introduced in SAS-1, with small additions
+in SAS-1.1 . There have been a large number of additions in SAS-2 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006 Douglas Gilbert
+Copyright \(co 2006\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
