--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "December 2007" "smp_utils\-0.93" SMP_UTILS
+.TH SMP_UTILS "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SMP function
 .SH SYNOPSIS
@@ -183,12 +183,34 @@ package could be used like this:
 .PP
 Any given "attached SAS address" is either a HBA, an expander or 0
 indicating that port is not connected.
+.SH CONFORMING TO
+To date SAS has three generations. The first two generations are approved
+standards: the original SAS (SAS ANSI INCITS 376-2003) and SAS 1.1 (INCITS
+417-2006). SAS-2 technical work is ongoing and at the time of writing the
+most recent draft is sas2r13.pdf (see section 10.4.3 for SMP functions).
+To avoid confusion, the three generations of SAS will be referred to in
+these man pages as 1, 1.1 and 2 . Drafts, including those just prior to
+standardization can be found at the http://www.t10.org site.
+.PP
+The two utilities for reading and writing to GPIO registers, smp_read_gpio
+and smp_write_gpio, are defined in the Small Form Factor document SFF-8485
+found at http://www.sffcommittee.com .
+.PP
+In this section of each utility's man page is the first standard in which
+the associated SMP function appeared and whether there have been significant
+additions in later standards.
+.PP
+The COVERAGE file in the smp_utils source tarball shows the mapping between
+all SMP function names defined in the standards, the versions of those
+standards in which those SMP functions are defined and the utility names.
+A lot of extra SMP functions have been added in SAS-2 and many do not have
+corresponding utilities at this time.
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2007 Douglas Gilbert
+Copyright \(co 2006\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
